<resources>
    <string name="app_name">Jigsaw</string>
    <string name="Label">Jigsaw</string>

    <string name="create_plan">Create Your Plan</string>
    <string name="go_to_main_page">Go to Main Page >></string>

    <string name="date">Date</string>
    <string name="Log">Log</string>
    <string name="Data">Data</string>
    <string name="theme">Theme</string>
    <string name="background">Jigsaw</string>
    <string name="back_to_jigsaw">Back to Jigsaw View</string>
    <string name="tutorial">Tutorial</string>
    <string name="about_jigsaw">About Jigsaw</string>

    <string name="create">Create A New Plan</string>
    <string name="Name">Name:</string>
    <string name="noName">Name Cannot be empty</string>
    <string name="Remark">Remark:</string>
    <string name="noRemark">Remark Cannot be empty</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="duration">Duration:</string>
    <string name="duration_1">Quart Hour</string>
    <string name="duration_2">Half Hour</string>
    <string name="duration_3">One Hour</string>
    <string name="duration_4">One and Half Hours</string>
    <string name="duration_5">Two Hours</string>
    <string name="duration_6">Three Hours</string>
    <string name="successful_add_1">New Plan </string>
    <string name="successful_add_2">Successful Added.</string>
    <string name="successful_change_1">Plan </string>
    <string name="successful_change_2">Successful Changed.</string>
    <string name="hint_name">Required</string>
    <string name="hint_remark">Optional</string>

    <string name="t00">00</string>
    <string name="t03">03</string>
    <string name="t06">06</string>
    <string name="t09">09</string>
    <string name="t12">12</string>
    <string name="t15">15</string>
    <string name="t18">18</string>
    <string name="t21">21</string>
    <string name="t24">24</string>

    <string name="quart_hour">Quart Hour</string>
    <string name="half_hour">Half Hour</string>
    <string name="one_hour">One Hour</string>
    <string name="one_and_half_hour">One and Half Hours</string>
    <string name="two_hour">Two Hours</string>
    <string name="three_hour">Three Hours</string>

    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Deleting</string>
<string name="record_week">Record of the week/ (min)</string>

    <string name="pie_chart">Record of the day/ (min)</string>

    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="week">Week</string>

    <string name="get_to_start">Get to start your Jigsaw Puzzle trip!</string>
    <string name="no_found_on_day">No record on the day</string>
    <string name="no_found_on_week">No record on the week.</string>


    <string name="timer">Timer</string>
    <string name="exit_timer">Stop</string>
    <string name="exit_toast1">Your plan had finished, duration is</string>
    <string name="exit_msg1">Really want to STOP?Your plan\'s duration is </string>
    <string name="exit_msg2"> minutes now.</string>
    <string name="remain">remaining..</string>

    <string name="card_view">Card View</string>
    <string name="time">Time:</string>
    <string name="card_date">Date:</string>


    <string name="theme_banana">Banana</string>
    <string name="theme_default">Default</string>
    <string name="theme_blueberry">Blueberry</string>
    <string name="theme_tomato">Tomato</string>
    <string name="theme_sage">Sage</string>
    <string name="theme_grape">Grape</string>
    <string name="theme_graphite">Graphite</string>
    <string name="preview">Preview</string>


    <string name="version">Version 0.1.17(alpha)</string>
    <string name="producer">Produced By \n Toaru SMU No Idea Project</string>
    <string name="introduction">balbalabala</string>
</resources>
