<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smu_bme.jigsaw.MainActivity">
    <item
        android:id="@+id/theme"
        android:orderInCategory="100"
        android:title="@string/theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/background"
        android:orderInCategory="100"
        android:title="@string/background"
        app:showAsAction="never" />
    <item
        android:id="@+id/back_to_jigsaw"
        android:orderInCategory="100"
        android:title="@string/back_to_jigsaw"
        app:showAsAction="never" />
    <item
        android:id="@+id/tutorial"
        android:orderInCategory="100"
        android:title="@string/tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_jigsaw"
        android:orderInCategory="100"
        android:title="@string/about_jigsaw"
        app:showAsAction="never" />
</menu>
