<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_layout"
    android:padding="14dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.CardView
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
           <ImageView
               android:id="@+id/title_preview"
               android:layout_width="match_parent"
               android:layout_height="24dp" />
            <TextView
                android:text="@string/app_name"
                android:gravity=""
                android:background="@color/colorAccent"
                android:id="@+id/action_preview"
                android:layout_width="match_parent"
                android:layout_height="56dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_circle"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_width="56dp"
                    android:layout_height="56dp" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TableLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radio_group">
            <TableRow
                android:layout_width="match_parent">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_default"
                    android:id="@+id/defaultButton" />
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_banana"
                    android:id="@+id/bananaButton" />
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_grape"
                    android:id="@+id/grapeButton" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent">
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_tomato"
                    android:id="@+id/tomatoButton" />
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_graphite"
                    android:id="@+id/graphiteButton" />
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_blueberry"
                    android:id="@+id/blueberryButton" />
            </TableRow>
        </RadioGroup>
    </TableLayout>
</LinearLayout>
