<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:padding="18dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/jigsaw_icon"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:textSize="50sp"
            android:layout_weight="2"
            android:text="@string/app_name"
            android:layout_height="0sp"
            android:layout_width="wrap_content" />
        <TextView
            android:gravity="right"
            android:layout_gravity="right"
            android:text="@string/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/producer"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
