<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smu_bme.jigsaw.CardActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        app:cardCornerRadius="7dp"
        app:cardElevation="14dp"
        android:foreground="?android:attr/selectableItemBackground">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/card_header"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>
            <EditText
                style="@style/AppTheme.AppBarOverlay"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="40sp"
                android:textColor="@android:color/darker_gray"
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableLayout
                android:layout_margin="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:text="@string/card_date"/>
                    <TextView
                        android:gravity="end"
                        android:id="@+id/card_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/time"/>
                    <TextView
                        android:gravity="end"
                        android:id="@+id/card_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/duration"/>
                    <TextView
                        android:gravity="end"
                        android:id="@+id/card_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <EditText
                    android:id="@+id/card_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <Button
                    android:textColor="@android:color/holo_red_light"
                    android:background="@android:color/transparent"
                    android:text="@string/delete"
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:textColor="@android:color/holo_blue_light"
                    android:background="@android:color/transparent"
                    android:text="@string/edit"
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
